fix morty's lips and z-index for .links

--- a/common.css
+++ b/common.css
@@ -2,6 +2,7 @@
     position: fixed;
     bottom: 0;
     right: 0;
+    z-index: 21;
 }
 
 .links img {
